force-app/main/default/objects/Timeline_Configuration__c/Timeline_Configuration__c.object-meta.xml
<CustomObject>
    <description>Custom object to allow additional customization for History Timeline component.</description>
    <label>Timeline Configuration</label>
    <nameField>
        <displayFormat>TC{0000}</displayFormat>
        <label>Timeline Configuration Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeline Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>