force-app/main/default/objects/Timeline_Configuration__c/fields/Config_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Config_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>This value is used to identify configuration for the component. This value should be provided in LIghtning App Builder when configuring the component.</inlineHelpText>
    <label>Config Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>