force-app/main/default/objects/Timeline_Configuration__c/fields/Content_Format__c.field-meta.xml
<CustomField>
    <fullName>Content_Format__c</fullName>
    <inlineHelpText>Defines format in which Timeline content is displayed.</inlineHelpText>
    <label>Content Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
                <default>true</default>
                <label>Classic</label>
            </value>
            <value>
                <fullName>Minimal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>