force-app/main/default/objects/Timeline_Configuration__c/fields/Default_Date_Filter__c.field-meta.xml
<CustomField>
    <fullName>Default_Date_Filter__c</fullName>
    <inlineHelpText>Default value for Date Filter. This value needs to be either &apos;All Time&apos; or one of the selected values for Visible Date Filters.</inlineHelpText>
    <label>Default Date Filter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Date_Filter_Values</valueSetName>
    </valueSet>
</CustomField>