force-app/main/default/objects/Timeline_Configuration__c/fields/Primary_Grouping_By__c.field-meta.xml
<CustomField>
    <fullName>Primary_Grouping_By__c</fullName>
    <inlineHelpText>Primary grouping for the timeline content.</inlineHelpText>
    <label>Primary Grouping By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
                <default>true</default>
                <label>Date</label>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>