force-app/main/default/objects/Timeline_Configuration__c/fields/Show_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Show_Record_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Displays a button that navigates to record detail. Useful when displaying the data for related records.</inlineHelpText>
    <label>Show Record Link</label>
    <type>Checkbox</type>
</CustomField>