force-app/main/default/objects/Timeline_Configuration__c/fields/Show_Table_format_button__c.field-meta.xml
<CustomField>
    <fullName>Show_Table_format_button__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Shows button that navigates to OOB table format. Make sure the standard History Related List is added to the Page Layout.</inlineHelpText>
    <label>Show Table format button</label>
    <type>Checkbox</type>
</CustomField>