force-app/main/default/objects/Timeline_Configuration__c/fields/Timeline_Content_Height__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Content_Height__c</fullName>
    <inlineHelpText>Enter height with unit such as px, rem, em, etc. Leave blank to let the timeline expand based on content. This value overrides the value provided in Lightning App builder.</inlineHelpText>
    <label>Timeline Content Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>