force-app/main/default/objects/Timeline_Configuration__c/fields/Visible_Date_Filters__c.field-meta.xml
<CustomField>
    <fullName>Visible_Date_Filters__c</fullName>
    <inlineHelpText>List of date filters to show up in the timeline component.</inlineHelpText>
    <label>Visible Date Filters</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Date_Filter_Values</valueSetName>
    </valueSet>
</CustomField>