force-app/main/default/objects/Timeline_Configuration__c/recordTypes/History_Config.recordType-meta.xml
<RecordType>
    <fullName>History_Config</fullName>
    <active>true</active>
    <label>History Config</label>
</RecordType>