force-app/main/default/objects/Timeline_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Config_Identifier__c</columns>
    <columns>Primary_Grouping_By__c</columns>
    <columns>Content_Format__c</columns>
    <columns>Visible_Date_Filters__c</columns>
    <columns>Default_Date_Filter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>